# WinAntHttp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WinAntHttp.sln
include/winant_http/: winant_api.h  winant_common_types.h  winant_constants.h  winant_request.h  winant_request_builder.h  winant_response.h
src/: winant_common_types.cpp  winant_request.cpp  winant_response.cpp
tests/: common_types_unittest.cpp  get_unittest.cpp  head_unittest.cpp  header_unittest.cpp  http_request_unittest.cpp  post_unittest.cpp  tests.vcxproj  tests.vcxproj.filters  utils_unittest.cpp
tests/server/: mock_server.py
winant_http/: winant_api.h  winant_common_types.cpp  winant_common_types.h  winant_http.h  winant_http.vcxproj  winant_http.vcxproj.filters  winant_request.cpp  winant_request.h  winant_request_builder.cpp  winant_request_builder.h  winant_response.cpp  winant_response.h  winant_utils.cpp  winant_utils.h
winant_http/internal/: scoped_internet_handle.h
